--- a/signin.css
+++ b/signin.css
@@ -14,10 +14,10 @@
     .h-custom {
         height: 100%;
     }
-content: "";
+/* content: "";
 flex: 1;
 height: 1px;
-background: #eee;
+background: #eee; */
 }
 .h-custom {
 height: calc(100% - 73px);
